  rebuilt is the same order in which make processed them, and this is defined
  to be true in the GNU make manual.

* WARNING: Backward-incompatibility!
  Previously only simple (one-letter) options were added to the MAKEFLAGS
  variable that was visible while parsing makefiles.  Now, all options
  are available in MAKEFLAGS.

* WARNING: New build requirement
  GNU make utilizes facilities from GNU Gnulib: Gnulib requires certain C99
  features in the C compiler and so these features are required by GNU make:
  https://www.gnu.org/software/gnulib/manual/html_node/C99-features-assumed.html
  The configure script should verify the compiler has these features.

* New feature: The .NOTINTERMEDIATE special target
  .NOTINTERMEDIATE Disables intermediate behavior for specific files, for all
  files built using a pattern, or for the entire makefile.
  Implementation provided by Dmitry Goncharov <dgoncharov@users.sf.net>

* New feature: The $(let ...) function
  This function allows user-defined functions to define a set of local
  variables: values can be assigned to these variables from within the
  user-defined function and they will not impact global variable assignments.
  Implementation provided by Jouke Witteveen <j.witteveen@gmail.com>

* New feature: The $(intcmp ...) function
  This function allows conditional evaluation controlled by a numerical
  comparison.
  Implementation provided by Jouke Witteveen <j.witteveen@gmail.com>

* New feature: Improved support for -l / --load-average
  On systems that provide /proc/loadavg (Linux), GNU make will use it to
  determine the number of runnable jobs and use this as the current load,
  avoiding the need for heuristics.
  Implementation provided by Sven C. Dack <sdack@gmx.com>

* New feature: The --shuffle command line option
  This option reorders goals and prerequisites to simulate non-determinism
  that may be seen using parallel build.  Shuffle mode allows a form of "fuzz